--- a/templates/camera.html
+++ b/templates/camera.html
@@ -21,7 +21,7 @@
 {%endif%}
 
 {%if message == 6%}
-<H3 style="align-content: center;font-family: 'Roboto', sans-serif;position: absolute;border-radius: 0; left: 43%; top:0%;" class="alert-danger">You already have an account here, you might be a fraud<br></H3>
+<H3 style="align-content: center;font-family: 'Roboto', sans-serif;position: absolute;border-radius: 0; left: 43%; top:0%;" class="alert-danger">You have the same face with other account. You already have an account here, you might be a fraud<br></H3>
 {%endif%}
 
 {%if message == 7%}
@@ -35,6 +35,19 @@
 {%if message == 9%}
 <H3 style="align-content: center;font-family: 'Roboto', sans-serif;position: absolute;border-radius: 0; left: 43%; top:0%;" class="alert-danger">Please recapture your front face properly<br></H3>
 {%endif%}
+
+{%if message == 10%}
+<H3 style="align-content: center;font-family: 'Roboto', sans-serif;position: absolute;border-radius: 0; left: 43%; top:0%;" class="alert-danger">User not found! Might not be registered yet<br></H3>
+{%endif%}
+
+{%if message == 11%}
+<H3 style="align-content: center;font-family: 'Roboto', sans-serif;position: absolute;border-radius: 0; left: 43%; top:0%;" class="alert-danger">Preprocess failed! Please recapture as your face maybe not clear or more than one face exist<br></H3>
+{%endif%}
+
+{%if message == 12%}
+<H3 style="align-content: center;font-family: 'Roboto', sans-serif;position: absolute;border-radius: 0; left: 43%; top:0%;" class="alert-danger">Please capture again. Could not find a face or face not clear<br></H3>
+{%endif%}
+
 
 
 <div style="padding: 0px;margin: 0px;width:220;height:240;">
