--- a/templates/login.html
+++ b/templates/login.html
@@ -99,4 +99,19 @@ Or<br><br>
 
  {% endif %}
 
+ {% if (messager == 5 ) %}
+  <center>
+            <header  style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:300px ">
+
+                   &#10060 You have the same face with other account. You already have an account here, you might be a fraud
+
+            </header>
+              </center>
+
+            </div>
+
+
+
+ {% endif %}
+
 {% endblock %}
